cmake_minimum_required(VERSION 3.7)
project(MyCAD)

set(CMAKE_CXX_STANDARD 11)
INCLUDE_DIRECTORIES(sys/include include)
aux_source_directory(. SOURCE_FILES)
aux_source_directory(sys/include SOURCE_FILES)
aux_source_directory(sys/libgraphics SOURCE_FILES)
#aux_source_directory(src SOURCE_FILES)
#aux_source_directory(include SOURCE_FILES)
MESSAGE(${SOURCE_FILES})
#add_subdirectory(src)
#add_subdirectory(sys/libgraphics)
add_executable(MyCAD ${SOURCE_FILES})
#target_link_libraries(sysLib)